<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Buddy Personal</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="map">Map</string>
    <string name="itinerary">Itinerary</string>
    <string name="login">Log In</string>
    <string name="name"><i>Name</i></string>
    <string name="surname"><i>Surname</i></string>
    <string name="dob"><i>Date of Birth</i></string>
    <string name="email"><i>Email Address</i></string>
    <string name="username"><i>Username</i></string>
    <string name="password"><i>Password</i></string>
    <string name="conf_password"><i>Confirm Password</i></string>
    <string name="terms_and_cond">I accept the Terms and Conditions</string>
    <string name="Help">Help</string>
    <string name="create_event">Create Event</string>
    <string name="contact_us">Contact Us</string>
    <string name="title"><i>Title</i></string>
    <string name="start_time"><i>10:00</i></string>
    <string name="start_date"><i>30/12/2021</i></string>
    <string name="end_time"><i>11:00</i></string>
    <string name="end_date"><i>31/12/2021</i></string>
    <string name="loc_type"><i>Location Type</i></string>
    <string name="location"><i>Location</i></string>
    <string name="host"><i>Host</i></string>
    <string name="invitees"><i>Invitees</i></string>
    <string name="attendents"><i>Attendents</i></string>
    <string name="capacity"><i>Capacity</i></string>
    <string name="reminder"><i>Reminder</i></string>
    <string name="notes"><i>Notes</i></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="account">Account</string>
    <string name="accessibility">Accessibility</string>
    <string name="customisation">Customisation</string>
    <string name="how_to_use">How to Use</string>
    <string name="profile">Profile</string>
    <string name="map_view">Map View</string>
    <string name="venue_event">Venue Events</string>
    <string name="itinerary_view">Itinerary View</string>
    <string name="log_out">Log Out</string>
    <string name="col_name">Name:</string>
    <string name="col_surname">Surname:</string>
    <string name="col_dob">Date of Birth:</string>
    <string name="col_email">Email Address:</string>
    <string name="col_username">Username:</string>
    <string name="col_password">Password:</string>
    <string name="col_conf_password">Confirm Password:</string>
    <string name="col_title">Title:</string>
    <string name="col_start_time">Start Time:</string>
    <string name="col_start_date">Start Date:</string>
    <string name="col_end_time">End Time:</string>
    <string name="col_end_date">End Date:</string>
    <string name="col_loc_type">Location Type:</string>
    <string name="col_location">Location:</string>
    <string name="col_host">Host:</string>
    <string name="col_invitees">Invitees:</string>
    <string name="col_attendents">Attendents:</string>
    <string name="col_capacity">Capacity:</string>
    <string name="col_reminder">Reminder:</string>
    <string name="col_notes">Notes:</string>
    <string name="calendar">Calendar</string>
    <string name="english">English</string>
    <string name="maltese">Maltese</string>
    <string name="spanish">Spanish</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="col_new_password">New Password:</string>
    <string name="col_new_conf_password">Confirm New Password:</string>
    <string name="edit">Edit</string>
    <string name="col_curr_password">Current Password:</string>
    <string name="event">Event</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="col_sec_key">Security Key:</string>
    <string name="sec_key"><i>Security Key</i></string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="get_navigation">Get Navigation</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="buddy" translatable="false">Buddy</string>
    <string name="buddy_sumbit">Submit Query to Buddy</string>
    <string name="buddy_voice">Make Voice Query to Buddy</string>
    <string name="ask_buddy">Ask Buddy</string>
    <string name="app_logo">Buddy Personal Logo</string>
    <string name="nav_drawer_icon">Navigation Drawer Icon</string>
</resources>